# persona-obsidian

./: .gitignore  AGENTS.md  CLAUDE.md  Ecomms Home.template.md  GEMINI.md  Home.md  Mobile Home.md  README.md  SETUP.md  test-manifest.json
.github/workflows/: test.yml
.husky/: pre-commit
.obsidian/: app.json  appearance.json  canvas.json  community-plugins.json  core-plugins.json  daily-notes.json  hotkeys.json  morgen-config.json  workspaces.json
.obsidian/snippets/: dashboard-box.css  full-width-div.css  journal-nav-compact.css  mobile-home.css  responsive-nav-grid.css
Projects/Persona/: AGENTS.md  ARCHITECTURE_JOB_QUEUE.md  CLAUDE.md  GEMINI.md  JOB_QUEUE_SUMMARY.md  Readme.md  SETUP_JOB_QUEUE.md
Projects/Persona/python/: .coverage  .env.template  README.md  install.sh  persona-worker.service.template  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  setup.py
Projects/Persona/python/persona/: __init__.py  bridge.py  cli.py  migrate.py  monitor.py  worker.py
Projects/Persona/python/persona/core/: __init__.py  job_store.py  note_state.py  process_manager.py
Projects/Persona/python/persona_queue.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Projects/Persona/python/tests/: __init__.py  conftest.py  test_bridge.py  test_job_store.py
Projects/Personal/: NAS Updates.md
Resources/: .migration-completed  Workflow.md  gemini-scribe-history.backup.json  gemini-scribe-history.json
Resources/Dashboards/: sales-analytics.md  sales-pipeline.md
Resources/General/: Workflow.md  banners.md
test-runs/: latest
(+377 files in other folders)
